--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "generate-mock-data": "babel-node buildScripts/generateMockData",
     "prestart-mockapi": "npm run generate-mock-data",
     "start-mockapi": "json-server --watch src/api/db.json --port 3001",
-
     "clean-dist": "rimraf ./dist && mkdir dist",
     "prebuild": "npm-run-all clean-dist test lint",
-    "build": "babel-node buildSCripts/build.js",
-    "postbuild": "babel-node buildScripts/distServer.js"
+    "build": "npm run quickbuild",
+    "postbuild": "babel-node buildScripts/distServer.js",
+    "quickbuild": "babel-node buildSCripts/build.js"
   },
   "author": "Cory House",
   "license": "MIT",
   "dependencies": {
+    "npm": "^6.4.1",
     "whatwg-fetch": "1.0.0"
   },
   "devDependencies": {
